--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Наш первый проект</title>
+    <title>Наш первый проект!</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header class="header">
-      <h1 class="header__title">Наш первый проект</h1>
+      <h1 class="header__title">Наш первый проект!</h1>
       <img src="./logo.png" alt="Логотип" />
     </header>
     <main class="content">
