add one more point

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li class="content__list-item">Второй</li>
         <li class="content__list-item">Третий</li>
         <li class="content__list-item">Четвертый</li>
+        <li class="content__list-item">Пятый пункт</li>
       </ol>
     </main>
     <footer class="footer"></footer>
