--- a/02-flow/index.html
+++ b/02-flow/index.html
@@ -1,71 +1,71 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>О потоке и его особенностях</title>
+  <title>О лэйауте</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body class="page">
-  <h1>О потоке и его особенностях</h1>
-  <section>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio excepturi, ipsam nam saepe quo mollitia, at aliquam quae et hic nihil, tempora laudantium sit. Rerum non sint quasi architecto laudantium!</p>
-    <p>Hello, students! <a href="#">click here</a></p>
-  </section>
-  <section dir="rtl" lang="iv" class="ivrit">
-    <p>
-      חַייָל זָקֵן הלך הביתה לחוּפשָה. הִתעַייֵף בַּדֶרֶך ונַעֲשָׂה רָעֵב. עָבַר בכּפָר ושם ניגש לבַּיִת הראשון. <br>
+  <h1>О особенностях раскладки на странице</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ratione odit accusamus rerum inventore animi repudiandae qui tempore cupiditate vitae nobis magni eos ipsum, delectus et id. Nemo, est amet.</p>
+  <section class="ivrit">
+    <p>חַייָל זָקֵן הלך הביתה לחוּפשָה. הִתעַייֵף בַּדֶרֶך ונַעֲשָׂה רָעֵב. עָבַר בכּפָר ושם ניגש לבַּיִת הראשון. <br>
 
-  " אָנָא, תנו לעוֹבֵר אוֹרֵחַ לָנוּחַ קצת אֶצלְכֶם!" <br>
+      " אָנָא, תנו לעוֹבֵר אוֹרֵחַ לָנוּחַ קצת אֶצלְכֶם!" <br>
 
-  פִּתחָה לו אישה זקנה
+      פִּתחָה לו אישה זקנה
 
-  "כנס חייל!" <br>
+      "כנס חייל!" <br>
 
-  "ואולי נִיתָן אצלך גם לאכול דָבָר מה?" <br>
+      "ואולי נִיתָן אצלך גם לאכול דָבָר מה?" <br>
 
-  הזקנה הייתה עָשִירה אבל קַמצָנית. אפילו קֶרַח בחורף לא הייתה נותנת. <br>
+      הזקנה הייתה עָשִירה אבל קַמצָנית. אפילו קֶרַח בחורף לא הייתה נותנת. <br>
 
-  "אוי, אישי הטוב, בעצמי עוד לא אכלתי היום. <br>
+      "אוי, אישי הטוב, בעצמי עוד לא אכלתי היום. <br>
 
-  אין לי כלום בבית!" <br>
+      אין לי כלום בבית!" <br>
 
-  "אין אז אין" ענה החייל. <br>
+      "אין אז אין" ענה החייל. <br>
 
-  ואז הוא ראה גַרזֶן ללא יָדִית, מוּנָח תחת סַפסָל. <br>
+      ואז הוא ראה גַרזֶן ללא יָדִית, מוּנָח תחת סַפסָל. <br>
 
-  "אם אין דבר אחר, אולי נוּכַל לְבַשֵל דַייסָה מהגַרזֶן?" <br>
+      "אם אין דבר אחר, אולי נוּכַל לְבַשֵל דַייסָה מהגַרזֶן?" <br>
 
-  בַּעֲלַת בַּיִת הֵנִיפה ידיים "איך? איך אפשר לְבַשֵל דַייסָה מגַרזֶן?" <br>
+      בַּעֲלַת בַּיִת הֵנִיפה ידיים "איך? איך אפשר לְבַשֵל דַייסָה מגַרזֶן?" <br>
 
-  "תביאי סִיר, תֵכֶף אראֶה לך איזו דַייסָה נבשל מהגַרזֶן". <br>
-    </p>
+      "תביאי סִיר, תֵכֶף אראֶה לך איזו דַייסָה נבשל מהגַרזֶן". <br></p>
   </section>
   <section class="japan">
     <p>私は昨日公園で高橋さんとテニスをしました</p>
   </section>
   <section class="inline-and-block">
-    <span>SPAN</span><span>SPAN</span>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et, quam fugiat accusantium architecto maxime aperiam optio asperiores distinctio quaerat inventore possimus rem at placeat exercitationem ducimus magni sequi! Explicabo, adipisci?</p>
+    <span>First</span><span>Second</span>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam facilis, voluptatem sint fuga error sed obcaecati quod, officia placeat cupiditate eaque veniam fugiat excepturi quibusdam voluptates repellat expedita! Vitae, animi?</p>
   </section>
   <section class="display">
-    <p class="inline">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae rerum, rem officia debitis omnis fugit possimus animi vero suscipit natus sequi. Debitis libero aliquid illo nostrum aut minus nihil aperiam.</p>
-    <p class="inline-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi non exercitationem hic eius ex recusandae debitis voluptatem dicta dignissimos eveniet, aspernatur sit distinctio, enim sed ullam odio, excepturi nam commodi.</p>
-    <p class="inline-block">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi rerum impedit, magnam, praesentium dolor harum molestias alias asperiores facere tenetur ipsum nobis iste temporibus magni ratione. Non perferendis cumque odio.</p>
+    <p class="inline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, impedit ab! Porro iure, ullam laborum corporis voluptatem reiciendis harum voluptates modi ipsam asperiores! Id maxime voluptate explicabo necessitatibus quod illo.</p>
+    <p class="inline">Lorem ipsum, dolor <a class="inline-block" href="#">Link here</a> sit amet consectetur adipisicing elit. Dignissimos quam ut soluta. Cumque, voluptate iusto rem quas, accusamus sit excepturi maiores ea eum consequuntur eaque fugiat doloribus quibusdam? Inventore, repudiandae.</p>
+    <p class="inline">
+      <a href="#" class="block">Another</a>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam repellat architecto quasi id, vitae facere cum at quos sed placeat esse. Cumque porro in praesentium distinctio optio iure id soluta?
+    </p>
   </section>
+
   <section class="flex">
     <p>1</p>
     <p>2</p>
     <p>3</p>
   </section>
   <section class="columns">
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae assumenda accusamus deleniti ab aliquid exercitationem voluptatum repellendus architecto quas. Nisi totam distinctio officiis suscipit maxime maiores aperiam? Voluptatibus, nostrum molestias.
-    Id minima autem repudiandae doloremque reprehenderit ea et perferendis totam commodi, quisquam itaque cumque possimus voluptatibus aut voluptas expedita animi pariatur? Saepe non eos odit exercitationem sequi soluta, earum accusamus.
-    <img src="https://images.unsplash.com/photo-1629199022827-eede3c3df471?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2089&q=80" alt="">
-    Ipsa fuga fugit porro, impedit officia quam asperiores vero distinctio quo in aspernatur eaque dicta rerum vitae sunt accusantium explicabo minima praesentium molestias, velit eius, qui laboriosam ratione. Harum, quasi.
-    Corrupti dolorem at et unde ipsum eaque hic error debitis nobis. Quaerat unde itaque maxime id, aliquam dolorum facilis quas omnis, iure eius delectus placeat illum eligendi magnam consequuntur ullam!
-    Distinctio, eum. Aliquam, ipsa iste commodi voluptatem mollitia animi ex voluptates. Eius eos quo voluptas obcaecati maiores? Quo accusamus quibusdam expedita odit, sapiente corrupti alias enim sequi nostrum tempore nobis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia perspiciatis accusantium in, quae cumque sint quaerat deserunt? Placeat quisquam ullam voluptatum, nam pariatur aspernatur. Inventore illum optio impedit autem distinctio?
+    Accusamus temporibus perspiciatis cum quasi recusandae minima est accusantium dolore consectetur! Doloremque, illo incidunt. Officia animi, ex voluptatem, obcaecati id illo laborum ipsa, inventore eligendi unde rerum ipsum nam incidunt!
+    Esse dolores vitae quia cupiditate deleniti!
+    <img src="https://images.unsplash.com/photo-1593642632559-0c6d3fc62b89?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="">
+    Iure veniam autem dicta repellendus, nesciunt asperiores cum aliquid. Eos possimus minima, obcaecati id accusantium praesentium fugit tempora harum delectus similique culpa earum libero.
+    Nam nemo molestias sit doloribus culpa, quaerat fugit corporis perspiciatis delectus consequuntur minima tempore aspernatur quisquam ipsam labore eaque, voluptas fugiat accusamus doloremque odit quasi asperiores ex! Sit, ratione eligendi.
+    Laudantium accusantium nulla dolore fugit ab sunt tempora, vel, ut ipsa debitis consequatur, autem hic! Iusto, ut laudantium qui tenetur vitae possimus molestiae dolor culpa, atque similique, repudiandae fugiat eius?</p>
   </section>
   <section class="grid">
     <div class="cell"></div>
@@ -82,30 +82,22 @@
     <div class="cell"></div>
   </section>
   <section class="float">
-    <img src="https://images.unsplash.com/photo-1629199022827-eede3c3df471?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2089&q=80" alt="">
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quibusdam placeat laboriosam culpa consequatur! Atque illum nulla maxime quisquam dignissimos iste quasi dicta maiores esse? Quam harum vero vel blanditiis.</p>
+    <img src="https://images.unsplash.com/photo-1593642632559-0c6d3fc62b89?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque saepe quia vel enim doloremque quo! Provident ut ducimus corporis voluptatem libero aperiam reiciendis? Eum sit, dolores ab veritatis doloribus est?</p>
     <div class="clear"></div>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quibusdam placeat laboriosam culpa consequatur! Atque illum nulla maxime quisquam dignissimos iste quasi dicta maiores esse? Quam harum vero vel blanditiis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque saepe quia vel enim doloremque quo! Provident ut ducimus corporis voluptatem libero aperiam reiciendis? Eum sit, dolores ab veritatis doloribus est?</p>
   </section>
   <div class="round"></div>
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus ad cupiditate ab id illo, quae aperiam numquam libero iure magnam molestiae? Iusto quas dignissimos laboriosam, qui similique inventore beatae numquam!</p>
-
-
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum a minus sit numquam vero quod pariatur obcaecati ipsum corporis! Sit minima soluta iusto quae impedit voluptatum? Inventore necessitatibus rem consequuntur.</p>
   <div class="outer">
     <section class="absolute">
-      <div class="red-round"></div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, reprehenderit ipsum? Eveniet deleniti non dolorum rem tempore facilis nostrum accusamus dignissimos, dolorem, ullam perspiciatis impedit, totam tenetur corrupti. Blanditiis, voluptas.</p>
+      <div class="orange-round"></div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam reiciendis rerum soluta impedit, at tempora aspernatur voluptatum ad, ut ab doloribus nesciunt laudantium repudiandae amet sed? Autem molestias fugit mollitia?</p>
     </section>
   </div>
-
-  <section class="relative">
-    <div class="blue-round"></div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, reprehenderit ipsum? Eveniet deleniti non dolorum rem tempore facilis nostrum accusamus dignissimos, dolorem, ullam perspiciatis impedit, totam tenetur corrupti. Blanditiis, voluptas.</p>
-  </section>
-
   <section class="sticky">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, reprehenderit ipsum? Eveniet deleniti non dolorum rem tempore facilis nostrum accusamus dignissimos, dolorem, ullam perspiciatis impedit, totam tenetur corrupti. Blanditiis, voluptas.</p>
-    <div class="orange-round"></div>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique esse nam, totam enim sequi assumenda aliquid explicabo. Alias accusantium sit veritatis repudiandae? Recusandae, ullam illo? Iusto inventore perspiciatis assumenda molestiae.</p>
+    <div class="blue-round"></div>
   </section>
 </body>
 </html>
