--- a/04-livecoding/pre/index.html
+++ b/04-livecoding/pre/index.html
@@ -15,6 +15,9 @@
   </head>
   <!-- Обратить внимание на переиспользование блока cover -->
   <body class="page cover">
+    <header></header>
+    <main></main>
+    <footer></footer>
     <!-- Рассказать про микс элемента  -->
     <header class="header header_theme_dark cover__header">
       <!-- Объяснить зачем тут wrapper -->
